--- a/install/tarscontroller/crds/TDeploy.yaml
+++ b/install/tarscontroller/crds/TDeploy.yaml
@@ -25,6 +25,8 @@ spec:
   scope: Namespaced
   versions:
     - name: v1alpha1
+      served: true
+      storage: false
       schema:
         openAPIV3Schema:
           properties:
@@ -33,10 +35,12 @@ spec:
               properties:
                 app:
                   type: string
-                  pattern: ^[a-zA-Z][a-zA-Z0-9]{0,62}$
+                  pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+                  maxLength: 63
                 server:
                   type: string
-                  pattern: ^[a-zA-Z][a-zA-Z0-9]{0,62}$
+                  pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+                  maxLength: 63
                 important:
                   type: integer
                   minimum: 1
@@ -471,9 +475,9 @@ spec:
               default: false
           required: [ apply ]
           type: object
+    - name: v1alpha2
       served: true
       storage: true
-    - name: v1alpha2
       schema:
         openAPIV3Schema:
           properties:
@@ -482,10 +486,12 @@ spec:
               properties:
                 app:
                   type: string
-                  pattern: ^[a-zA-Z][a-zA-Z0-9]{0,62}$
+                  pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+                  maxLength: 63
                 server:
                   type: string
-                  pattern: ^[a-zA-Z][a-zA-Z0-9]{0,62}$
+                  pattern: ^[a-zA-Z][a-zA-Z0-9]*$
+                  maxLength: 63
                 important:
                   type: integer
                   minimum: 1
@@ -1029,5 +1035,3 @@ spec:
               default: false
           required: [ apply ]
           type: object
-      served: true
-      storage: false
