--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Build binary
         run: ./buildBinary
       - name: Build docker
-        run: ./buildHelm.sh index.docker.io/tascloud ${{ secrets.name }} ${{ secrets.pass }} v1.0.0-dev 
+        run: ./buildHelm.sh tarscloud ${{ secrets.name }} ${{ secrets.pass }} v1.0.0-dev 
