--- a/.github/workflows/build-compiler.yml
+++ b/.github/workflows/build-compiler.yml
@@ -8,10 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: docker login
-        run: |
-          docker login -u ${{ secrets.name }} -p ${{ secrets.pass }} 
-          env
+      - name: env
+        run: env
       - uses: actions/checkout@v1
       - name: Build docker
         run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler && docker push tarscloud/base-compiler
