--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,10 +8,8 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-      - name: docker login
-        run: |
-          docker login -u ${{ secrets.name }} -p ${{ secrets.pass }} 
-          env
+      - name: env
+        run: env
       - uses: actions/checkout@v1
       - name: Pull code
         run: env && ./prepare.sh    
