--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: docker login
-      run: |
-        docker login -u ${{ secrets.name }} -p ${{ secrets.pass }} 
+    - name: env
+      run: env
+    - uses: actions/checkout@v1
     - name: Pull code
       run: ./prepare.sh    
     - name: Build binary
