--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Pull code
         run: env && ./prepare.sh    
       - name: Build binary
-        run: ./buildBinary
+        run: ./buildBinary.sh
       - name: Build docker
         run: ./buildHelm.sh tarscloud ${{ secrets.name }} ${{ secrets.pass }} v1.0.0-dev 
