--- a/.github/workflows/build-compiler.yml
+++ b/.github/workflows/build-compiler.yml
@@ -6,12 +6,14 @@ on:
     branches:
       - master
     paths:
+      - ".github/workflows/build-compiler.yml"
       - "doc/tools"
       - "doc/base-compiler.Dockerfile"
   pull_request:
     branches:
       - master
     paths:
+      - ".github/workflows/build-compiler.yml"
       - "doc/tools"
       - "doc/base-compiler.Dockerfile"
       
@@ -23,5 +25,7 @@ jobs:
         run: env
       - uses: actions/checkout@v1
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler && docker push tarscloud/base-compiler
+        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler 
+      - name: push docker
+        run: docker push tarscloud/base-compiler
 
