--- a/doc/tools/helm-template/Chart.yaml
+++ b/doc/tools/helm-template/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.1
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,5 +25,5 @@ appVersion: "1.16.0"
 
 dependencies:
 - name: tserver
-  version: 1.0.19
-  repository: _chart_ 
+  version: 1.0.0
+  repository: file://../helm-lib/tars-server
