--- a/install/values.yaml
+++ b/install/values.yaml
@@ -1,6 +1,6 @@
 helm:
     build:
-      id: v1.0.2
+      id: v0.0.0-dev
     dockerhub:
-      registry: harbor.12345up.com/tars-k8s
+      registry: 
 
