--- a/.github/workflows/build-compiler-cor.yml
+++ b/.github/workflows/build-compiler-cor.yml
@@ -1,4 +1,4 @@
-name: build-base-compiler
+name: build-base-compiler-cor
 
 
 on:
@@ -6,14 +6,14 @@ on:
     branches:
       - master
     paths:
-      - ".github/workflows/build-compiler.yml"
+      - ".github/workflows/build-compiler-cor.yml"
       - "doc/tools"
       - "doc/base-compiler.Dockerfile"
   pull_request:
     branches:
       - master
     paths:
-      - ".github/workflows/build-compiler.yml"
+      - ".github/workflows/build-compiler-cor.yml"
       - "doc/tools"
       - "doc/base-compiler.Dockerfile"
       
@@ -27,7 +27,7 @@ jobs:
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler 
-      - name: push docker
-        run: docker push tarscloud/base-compiler
+        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:cor --build-arg cor
+      - name: push master docker
+        run: docker push tarscloud/base-compiler:cor
 
